ecmascript/parser/tests/test262-error-references/fail/89036b2edb64c00c.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/89036b2edb64c00c.js:1:2
  |
1 | ('
  |  ^

